...
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/ExploreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Explore"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Search for..."
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="24dp"
            app:layout_constraintEnd_toStartOf="@id/searchBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ExploreTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
...
